new function isBetween(), new function userMeetsToday()
